@@ -3,5 +3,9 @@
 | 1  | valid palindrome | two pointers | [ValidPalindrome.java](ValidPalindrome.java) | `javac --release 22 --enable-preview ValidPalindrome.java && java --enable-preview ValidPalindrome` |
 | 2  | reverse an array | two pointers | [ReverseArray.java](ReverseArray.java) | `javac --release 22 --enable-preview ReverseArray.java && java --enable-preview ReverseArray` |
 | 3  | pair with given sum in a sorted array | two pointers | [SumOfTwo.java](SumOfTwo.java) | `javac --release 22 --enable-preview SumOfTwo.java && java --enable-preview SumOfTwo` |
-| 4  | move zeros to end of array | | | |
+| 4  | move zeros to end of array | two pointers | [MoveZerosToEnd.java](MoveZerosToEnd.java) | `javac --release 22 --enable-preview MoveZerosToEnd.java && java --enable-preview MoveZerosToEnd` |
 | 5  | sum of three values | two pointers | [SumOfThree.java](SumOfThree.java) | `javac --release 22 --enable-preview SumOfThree.java && java --enable-preview SumOfThree` |
+| 6  | happy number | fast slow pointers | []() | `javac --release 22 --enable-preview TODO.java && java --enable-preview TODO` |
+| 7  | linked list cycle | fast slow pointers | []() | `javac --release 22 --enable-preview TODO.java && java --enable-preview TODO` |
+| 8  | middle of the linked list | fast slow pointers | []() | `javac --release 22 --enable-preview TODO.java && java --enable-preview TODO` |
+| 8  | detect cycle in an array | fast slow pointers | []() | `javac --release 22 --enable-preview TODO.java && java --enable-preview TODO` |
